support mime types
Fix #61

--- a/songbook-client.desktop
+++ b/songbook-client.desktop
@@ -13,4 +13,4 @@ Exec=songbook-client %U
 Icon=songbook-client.png
 Terminal=false
 Categories=Application;Utility;
-MimeType=text/sg;text/sb;
+MimeType=text/song;text/songbook;
