--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,10 @@
 [DEFAULT]
 upstream-branch = debian-upstream
 debian-branch = debian-wheezy
+[git-dch]
+upstream-tag = upstream/%(version)s
+debian-tag = debian-wheezy/%(version)s
 [git-buildpackage]
 export-dir = build-package/
 debian-tag = debian-wheezy/%(version)s
+postbuild = lintian $GBP_CHANGES_FILE
