provide alternative model/view for diagram area with QML

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ set(SONGBOOK_CLIENT_RCS
 find_package(Qt4 REQUIRED)
 set(QT_USE_QTSCRIPT true)
 set(QT_USE_QTSVG true)
+set(QT_USE_QTDECLARATIVE true)
 
 if(ENABLE_LIBRARY_DOWNLOAD)
   set(QT_USE_QTNETWORK true)
