--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ songbook-client
 doc/html
 doc/man
 doc/latex
+Patagui.config
+
+Patagui.creator
+
+Patagui.creator.user
+
+Patagui.files
+
+Patagui.includes
