--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,8 +109,8 @@ list(APPEND QT_LIBRARIES ${Qt5Widgets_LIBRARIES};${Qt5Script_LIBRARIES})
 
 ################ DIRTY HACK FOR IT TO WORK FOR NOW ###################
 #### Problem lies with cmake, can't properly find python3 on Mac #####
-SET(PYTHON_INCLUDE_DIR  /usr/local/Cellar/python3/3.4.2_1/Frameworks/Python.framework/Versions/3.4/include/python3.4m)
-SET(PYTHON_LIBRARY /usr/local/Cellar/python3/3.4.2_1/Frameworks/Python.framework/Versions/3.4/lib)
+SET(PYTHON_INCLUDE_DIR  /usr/local/Cellar/python3/3.4.3/Frameworks/Python.framework/Versions/3.4/include/python3.4m)
+SET(PYTHON_LIBRARY /usr/local/Cellar/python3/3.4.3/Frameworks/Python.framework/Versions/3.4/lib)
 ############################# End of Hack ############################
 
 # Finding Python 3
