Builds properly on Mac OS X
Needs testing on Linux, and Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,9 +128,10 @@ list(APPEND LIBRARIES ${PYTHON_LIBRARIES})
 
 # Setup PythonQt
 include(${CMAKE_MODULE_PATH}/FindPythonQt.cmake)
-list(APPEND LIBRARIES ${PYTHONQT_LIBRARIES})
 include_directories(${PYTHONQT_INCLUDE_DIR})
 message(STATUS ${PYTHONQT_LIBRARIES})
+list(APPEND LIBRARIES ${PYTHONQT_LIBRARIES})
+message(STATUS ${LIBRARIES})
 
 # Use LibArchive
 if(ENABLE_LIBRARY_DOWNLOAD)
@@ -185,6 +186,8 @@ endif(WIN32)
 
 # Setup Libraries for linking
 target_link_libraries(${SONGBOOK_CLIENT_APPLICATION_NAME} ${LIBRARIES})
+set_property(TARGET ${SONGBOOK_CLIENT_APPLICATION_NAME} PROPERTY IMPORTED_LOCATION ${PYTHONQT_LIBRARY_PATH})
+add_dependencies(${SONGBOOK_CLIENT_APPLICATION_NAME} PythonQt)
 
 # {{{ Internationalization
 set (TRANSLATIONS
