Final Songbook-Client -> Patagui switch
Apart from a couple of details and a strange windows icon bug, the
thing works.

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,9 @@ src/config.h
 build
 buildpackage.sh
 macos_specific/*priv*
-songbook-client
+Patagui
 *.dmg
 *.swp
 *~
 doc
-Patagui.*
-
 CMakeLists.txt.user
