--- a/config.hh.in
+++ b/config.hh.in
@@ -1,14 +1,14 @@
 #ifndef __CONFIG_HH__
 #define __CONFIG_HH__
 
-#define SONGBOOK_CLIENT_APPLICATION_NAME "@SONGBOOK_CLIENT_APPLICATION_NAME@"
-#define SONGBOOK_CLIENT_VERSION          "@SONGBOOK_CLIENT_VERSION@"
-#define SONGBOOK_CLIENT_COMPILE_MACHINE  "@SONGBOOK_CLIENT_COMPILE_MACHINE@"
-#define SONGBOOK_CLIENT_COMPILE_BY       "@SONGBOOK_CLIENT_COMPILE_BY@"
-#define SONGBOOK_CLIENT_COMPILE_HOSTNAME "@SONGBOOK_CLIENT_COMPILE_HOSTNAME@"
-#define SONGBOOK_CLIENT_RELEASE          "@SONGBOOK_CLIENT_RELEASE@"
-#define SONGBOOK_CLIENT_DATA_PATH        "@SONGBOOK_CLIENT_DATA_PATH@"
-#define SONGBOOK_CLIENT_COMMIT_DESCRIBE  "@SONGBOOK_CLIENT_COMMIT_DESCRIBE@"
+#define PATAGUI_APPLICATION_NAME "@PATAGUI_APPLICATION_NAME@"
+#define PATAGUI_VERSION          "@PATAGUI_VERSION@"
+#define PATAGUI_COMPILE_MACHINE  "@PATAGUI_COMPILE_MACHINE@"
+#define PATAGUI_COMPILE_BY       "@PATAGUI_COMPILE_BY@"
+#define PATAGUI_COMPILE_HOSTNAME "@PATAGUI_COMPILE_HOSTNAME@"
+#define PATAGUI_RELEASE          "@PATAGUI_RELEASE@"
+#define PATAGUI_DATA_PATH        "@PATAGUI_DATA_PATH@"
+#define PATAGUI_COMMIT_DESCRIBE  "@PATAGUI_COMMIT_DESCRIBE@"
 #cmakedefine USE_SPARKLE
 #cmakedefine ENABLE_LIBRARY_DOWNLOAD
 #cmakedefine ENABLE_SPELLCHECK
