--- a/patagui.desktop
+++ b/patagui.desktop
@@ -1,16 +1,16 @@
 [Desktop Entry]
 Version=0.6
 Type=Application
-Name=Patacrep Songbook Client
+Name=Patagui
 Name[fr]=Gestionnaire de recueils de chansons Patacrep
 Name[en]=Songbook manager Patacrep
 GenericName=Songbook manager
 GenericName[fr]=Gestionnaire de recueils de chansons
 GenericName[en]=Songbook manager
 Comment=Build Patacrep LaTeX Songbooks for Guitar Tabs
-TryExec=songbook-client
-Exec=songbook-client %U
-Icon=songbook-client.png
+TryExec=Patagui
+Exec=Patagui %U
+Icon=Patagui.png
 Terminal=false
 Categories=Application;Utility;
 MimeType=text/song;text/songbook;
