--- a/.travis.yml
+++ b/.travis.yml
@@ -43,5 +43,4 @@ script:
     && make
 
 after_failure:
-  - ls -l /opt/python/3.5.0/*
-  - ls -l /opt/python/3.5.0/include/*
+  - cat /home/travis/build/LaTruelle/patagui/pythonqt/src/PythonQt-External-stamp/PythonQt-External-build-*.log
